# celery

./: .bumpversion.cfg  .codespellrc  .cookiecutterrc  .coveragerc  .dockerignore  .drone.yml  .editorconfig  .gitignore  .landscape.yml  .pre-commit-config.yaml  .pyup.yml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  .varci.yml  AUTHORS  CHANGELOG  CLAUDE.md  CONTRIBUTING.rst  CONTRIBUTORS.txt  Changelog  Changelog.rst  Dockerfile  FAQ  INSTALL  LICENCE  LICENSE  MANIFEST.in  Makefile  README  README.md  README.rst  SECURITY.md  THANKS  TODO  appveyor.yml  bandit.json  branch_dictionary.py  branch_tracker.py  canvas.py  (+28 more)
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  deadpendency.yaml  dependabot.yml  opencollective.yml
_sources/: changelog.txt  community.txt  configuration.txt  contributing.txt  faq.txt  index.txt  whatsnew-2.5.txt
_static/: basic.css  celery.css  issuetracker.css  pygments.css
celery/: __compat__.py  __init__.py  __init__.py,cover  __main__.py  _state.py  abstract.py  actors.py  beat.py  bootsteps.py  buckets.py  canvas.py  click_plugins.py  conf.py  datastructures.py  decorators.py  discovery.py  events.py  exceptions.py  execute.py  fields.py  five.py  local.py  local.py,cover  log.py  managers.py  messaging.py  models.py  monitoring.py  patch.py  pidbox.py  platform.py  platforms.py  pool.py  process.py  registry.py  result.py  routes.py  scheduler.py  schedules.py  serialization.py  (+12 more)
celery_tests/: pyvenv.cfg
celerymon/: setup.py
contrib/: bump  doc2ghpages  doc4allmods  find-unprocessed-tasks.sh  periodic-task-runtimes.sh  queuelog.py  requirements  sphinx-to-rst.py  test_runner.py  testconn.py  testdynpool.py  verify-reference-index.sh
cookbook/: daemonizing.html  index.html  remote-tasks.html  task-retries.html  tasks.html  unit-testing.html
crunchy/: __init__.py  conf.py  log.py  managers.py  messaging.py  models.py  platform.py  registry.py  task.py  worker.py
django/: first-steps-with-django.html  index.html  unit-testing.html
docker/: .env  Dockerfile  compose.yaml  docker-compose.yml  entrypoint
docs/: AUTHORS.txt  Makefile  THANKS  _keep.rst  changelog.rst  changelog_formatter.py  community.rst  conf.py  configuration.html  configuration.rst  contributing.rst  copyright.rst  faq.rst  glossary.rst  index.rst  introduction.rst  links.rst  make.bat  name_change_request.txt  spelling_wordlist.txt  whatsnew-2.5.rst  whatsnew-2.6.rst  whatsnew-3.0.rst  whatsnew-3.1.rst  whatsnew-3.2.rst  whatsnew-4.0.rst  whatsnew-4.2.rst  whatsnew-4.3.rst  whatsnew-4.4.rst  whatsnew-5.0.rst  whatsnew-5.1.rst  whatsnew-5.2.rst  whatsnew-5.3.rst  xreftest.rst
examples/: README.rst
extra/: install_couchbase_client.sh  install_dynamodb.sh
funtests/: config.py  setup.py  test.cfg  test_basic.py
getting-started/: broker-installation.html  first-steps-with-celery.html  first-steps-with-django.html  first-steps-with-python.html  index.html  installation.html  introduction.html  periodic-tasks.html  resources.html
helm-chart/: Chart.yaml  README.rst  values.yaml
htmlcov/: class_index.html  function_index.html  index.html  setup_py.html  status.json  z_01848b168961befd___init___py.html  z_01848b168961befd_test_django_py.html  z_019d605a64973b17___init___py.html  z_019d605a64973b17_test_concurrency_py.html  z_019d605a64973b17_test_eventlet_py.html  z_019d605a64973b17_test_gevent_py.html  z_019d605a64973b17_test_pool_py.html  z_019d605a64973b17_test_prefork_py.html  z_019d605a64973b17_test_solo_py.html  z_019d605a64973b17_test_thread_py.html  z_1b7f309f68f83180___init___py.html  z_1b7f309f68f83180_task_py.html  z_1e64b09c3ebb6e5e___init___py.html  z_1e64b09c3ebb6e5e_asynpool_py.html  z_1e64b09c3ebb6e5e_base_py.html  z_1e64b09c3ebb6e5e_eventlet_py.html  z_1e64b09c3ebb6e5e_gevent_py.html  z_1e64b09c3ebb6e5e_prefork_py.html  z_1e64b09c3ebb6e5e_solo_py.html  z_1e64b09c3ebb6e5e_thread_py.html  z_20d959dcdfcaab73___init___py.html  z_20d959dcdfcaab73_amqp_py.html  z_20d959dcdfcaab73_base_py.html  z_20d959dcdfcaab73_beat_py.html  z_20d959dcdfcaab73_call_py.html  z_20d959dcdfcaab73_celery_py.html  z_20d959dcdfcaab73_control_py.html  z_20d959dcdfcaab73_events_py.html  z_20d959dcdfcaab73_list_py.html  z_20d959dcdfcaab73_logtool_py.html  z_20d959dcdfcaab73_migrate_py.html  z_20d959dcdfcaab73_multi_py.html  z_20d959dcdfcaab73_purge_py.html  z_20d959dcdfcaab73_result_py.html  z_20d959dcdfcaab73_shell_py.html  (+307 more)
internals/: app-overview.html  deprecation.html  events.html  guide.html  index.html  moduleindex.html  protocol.html  worker.html  workers.html
reference/: celery.actors.html  celery.app.amqp.html  celery.app.builtins.html  celery.app.control.html  celery.app.defaults.html  celery.app.html  celery.app.log.html  celery.app.registry.html  celery.app.task.builtins.html  celery.app.task.html  celery.apps.beat.html  celery.apps.worker.html  celery.backends.amqp.html  celery.backends.base.html  celery.backends.cache.html  celery.backends.database.html  celery.backends.html  celery.backends.mongodb.html  celery.backends.tyrant.html  celery.bin.base.html  celery.bin.camqadm.html  celery.bin.celerybeat.html  celery.bin.celeryctl.html  celery.bin.celeryd.html  celery.bin.celeryd_multi.html  celery.bin.celeryev.html  celery.bin.celeryinit.html  celery.conf.html  celery.contrib.abortable.html  celery.contrib.batches.html  celery.contrib.cancelable.html  celery.contrib.migrate.html  celery.contrib.rdb.html  celery.contrib.test_runner.html  celery.datastructures.html  celery.decorators.html  celery.discovery.html  celery.events.html  celery.events.state.html  celery.exceptions.html  (+40 more)
requirements/: README.rst  constraints.txt  default-py3k.txt  default.txt  dev.txt  docs.txt  jython.txt  pkgutils.txt  py25.txt  py26.txt  security.txt  test-ci-base.txt  test-ci-default.txt  test-ci.txt  test-integration.txt  test-py25.txt  test-py3k.txt  test-pypy.txt  test-pypy3.txt  test-smoke.txt  test-tmp_for_dev.txt  test.txt  test3.txt
scripts/: check-ci-test-matrices
sources/: changelog.txt  community.txt  (+7 more)
(+1997 files in other folders)
