[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
authors = ["Ask Solem <auvipy@gmail.com>"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: BSD License",
    "Topic :: System :: Distributed Computing",
    "Topic :: Software Development :: Object Brokering",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: OS Independent"
]
description = "Distributed Task Queue."
homepage = "http://celeryproject.org"
keywords = ["task", "job", "queue", "distributed", "messaging", "actor"]
license = "BSD"
name = "celery"
readme = "README.rst"
version = "5.2"

[tool.poetry.dependencies]
python = ">=3.6"
pytz = "^2021.1"
billiard = "^3.6.4"
kombu = "^5.1.0"
vine = "^5.0.0"
click = "^8.0.1"
click-didyoumean = "^0.0.3"
click-repl = "^0.2.0"
click-plugins = "^1.1.1"
setuptools = "^57.4.0"
[tool.poetry.extras]
