[tool:pytest]
testpaths = t/unit/
python_classes = test_*

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[flake8]
# classes can be lowercase, arguments and variables can be uppercase
# whenever it makes the code more readable.
ignore = N806, N802, N801, N803, E741, E742, E722, W504, F821, F723, E501

[pep257]
ignore = D102,D104,D203,D105,D213

[bdist_rpm]
requires = pytz >= 2016.7
           billiard >= 3.6.0,<4.0
           kombu >= 4.6.3,<5.0.0

[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE
