[tool:pytest]
addopts = --strict-markers
testpaths = t/unit/
python_classes = test_*
xfail_strict=true

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[flake8]
# classes can be lowercase, arguments and variables can be uppercase
# whenever it makes the code more readable.
max-line-length = 117
extend-ignore =
    D102,  # Missing docstring in public method
    D104,  # Missing docstring in public package
    D105,  # Missing docstring in magic method
    D107,  # Missing docstring in __init__
    D401,  # First line should be in imperative mood; try rephrasing
    D412,  # No blank lines allowed between a section header and its content
    E741,  # ambiguous variable name '...'
    E742,  # ambiguous class definition '...'
    F821,  # undefined name '...'
per-file-ignores =
   t/*,setup.py,examples/*,docs/*,extra/*:
       # docstrings
       D,

[bdist_rpm]
requires = pytz >= 2016.7
           billiard >= 3.6.3.0,<4.0
           kombu >= 4.6.8,<5.0.0

[bdist_wheel]
universal = 0

[metadata]
license_file = LICENSE
